# roguebusters

./: .gitignore  Cargo.toml  README.md
.cursor/rules/: architecture.mdc  project-notes.mdc  rust-patterns.mdc  visual-playtesting.mdc
data/generators/: apartment.generator.xml  apartment_bathroom.generator.xml  apartment_bedroom.generator.xml  apartment_kitchen.generator.xml  bank.generator.xml  barbershop.generator.xml  boxing_gym.generator.xml  brewery.generator.xml  casino.generator.xml  church.generator.xml  clinic.generator.xml  clinic_exam.generator.xml  clinic_operating.generator.xml  clinic_waiting.generator.xml  courthouse.generator.xml  courthouse_chambers.generator.xml  courthouse_courtroom.generator.xml  courthouse_holding.generator.xml  dock_office.generator.xml  flophouse.generator.xml  hideout.generator.xml  hideout_armory.generator.xml  hideout_bunk_room.generator.xml  hideout_planning.generator.xml  hotel.generator.xml  hotel_guest_room.generator.xml  hotel_lobby.generator.xml  hotel_storage.generator.xml  laundry.generator.xml  newspaper.generator.xml  office.generator.xml  pawn_shop.generator.xml  pharmacy.generator.xml  police_precinct.generator.xml  pool_hall.generator.xml  precinct_bullpen.generator.xml  precinct_captain_office.generator.xml  precinct_holding.generator.xml  restaurant.generator.xml  shop.generator.xml  (+3 more)
data/items/: clothing.items.xml  weapons.items.xml
data/names/: buildings.txt  female_names.txt  (+1 more)
scripts/: img2ascii.py
src/: city.rs  game.rs  input.rs  main.rs  names.rs  test.rs  ui.rs
tools/: compose_tileset.html
(+142 files in other folders)
