[package]
name = "roguebusters"
version = "0.1.0"
edition = "2021"

[features]
testing = []

[dependencies]
bracket-lib = "0.8"
lazy_static = "1.5.0"
log = "0.4.17"
rand = "0.8.5"
simple_logger = "4.1.0"
specs = "0.19.0"
specs-derive = "0.4.1"
walkdir = "2.3.3"
xml-rs = "0.8.4"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"

[patch.crates-io]
bracket-terminal = { path = "vendor/bracket-terminal" }
